--- a/index.html
+++ b/index.html
@@ -3,38 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startup TechX</title>
+    <title>TechX Solutions</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>TechX Solutions</h1>
-        <p>Inovação e Tecnologia para um Futuro Melhor</p>
+        <div class="header-content">
+            <h1>TechX Solutions</h1>
+            <p>Inovação e Tecnologia para um Futuro Melhor</p>
+        </div>
     </header>
 
     <section id="produto">
         <h2>Nossos Produtos</h2>
-        <img src="produto1.jpg" alt="Imagem de um aplicativo">
-        <img src="produto2.jpg" alt="Imagem de um dispositivo IoT">
+        <div class="produto-container">
+            <img src="produto1.jpg" alt="Imagem de um aplicativo" class="produto-img">
+            <img src="produto2.jpg" alt="Imagem de um dispositivo IoT" class="produto-img">
+        </div>
         <p>Na TechX Solutions, desenvolvemos soluções inovadoras que integram software e hardware, proporcionando uma experiência única para nossos clientes. Nosso aplicativo TechX App e o dispositivo TechX IoT são apenas o começo de um futuro tecnológico mais conectado e eficiente.</p>
     </section>
 
     <section id="equipe">
         <h2>Conheça a Equipe</h2>
-        <div class="membro-equipe">
-            <img src="membro1.jpg" alt="Foto de João Silva">
-            <h3>João Silva</h3>
-            <p>CEO & Fundador</p>
-        </div>
-        <div class="membro-equipe">
-            <img src="membro2.jpg" alt="Foto de Maria Souza">
-            <h3>Maria Souza</h3>
-            <p>CTO</p>
-        </div>
-        <div class="membro-equipe">
-            <img src="membro3.jpg" alt="Foto de Carlos Lima">
-            <h3>Carlos Lima</h3>
-            <p>Designer de Produto</p>
+        <div class="equipe-container">
+            <div class="membro-equipe">
+                <img src="membro1.jpg" alt="Foto de João Silva">
+                <h3>João Silva</h3>
+                <p>CEO & Fundador</p>
+            </div>
+            <div class="membro-equipe">
+                <img src="membro2.jpg" alt="Foto de Maria Souza">
+                <h3>Maria Souza</h3>
+                <p>CTO</p>
+            </div>
+            <div class="membro-equipe">
+                <img src="membro3.jpg" alt="Foto de Carlos Lima">
+                <h3>Carlos Lima</h3>
+                <p>Designer de Produto</p>
+            </div>
         </div>
     </section>
 
